[package]
name = "mlc-cli"
version = "0.1.4"
edition = "2021"

[[bin]]
name = "mlc"
path = "src/main.rs"

[dependencies]
anyhow       = "1"
async-trait  = "0.1"
chrono       = { version = "0.4", features = ["serde"] }
clap         = { version = "4", features = ["derive", "env"] }
ctrlc        = "3"
crossterm    = { version = "0.28", features = ["event-stream"] }
dirs         = "5"
futures-util = "0.3"
indexmap     = { version = "2", features = ["serde"] }
regex        = "1"
ratatui      = "0.29"
reqwest      = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1", features = ["full"] }
tracing      = "0.1"
tracing-appender    = "0.2"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"

[profile.release]
lto       = true
strip     = true
opt-level = 3
